Bug 290764 - Git plugin will ignore directory contains ignored files
Summary: Git plugin will ignore directory contains ignored files
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: plugins: git (other bugs)
Version First Reported In: 2.0
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Dörner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-06 03:18 UTC by Weng Xuetian
Modified: 2012-05-23 22:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Weng Xuetian 2012-01-06 03:18:24 UTC
Version:           2.0 (using Devel) 
OS:                Linux

Directory contains ignored file will not shown with "white square" in dolphin.

Reproducible: Always

Steps to Reproduce:
1. init a git repo
2. create .gitignore with *~
3. create a/b, add, and commit
4. create a/b~
5. go to the root of repo

Actual Results:  
directory "a" will be shown as ignored.

Expected Results:  
directory "a" shown with correct status

Seems introduced in recent RC, I don't have problem in RC1(? not sure), maybe up to beta.
Comment 1 Sebastian Dörner 2012-04-22 23:59:58 UTC
Thanks for finding this, I'm sorry this bug slipped my inbox. The changes necessary to fix this might be binary incompatible, so perhaps this won't get fixed before 4.9.

Internal note: If we don't want to hack this with a boolean, we'd need to upgrade to KVersionControlPlugin2, because V1 doesn't include IgnoredVersion. This is a good idea anyway, but needs some more work.
Comment 2 Sebastian Dörner 2012-05-23 21:40:25 UTC
SVN commit 1296335 by doerner:

Upgrade interface to KVersionControlPlugin2


 M  +23 -13    fileviewgitplugin.cpp  
 M  +10 -9     fileviewgitplugin.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1296335
Comment 3 Sebastian Dörner 2012-05-23 22:48:24 UTC
SVN commit 1296349 by doerner:

Correctly show the version state for directories containing ignored files.

Ignored files do not cause these directories to be shown as Unversioned any more.
Ignored files in the current directory are now also shown in a different color (by marking them as Ignored instead of simply Unversioned).

FIXED-IN: 4.9

 M  +9 -3      fileviewgitplugin.cpp  
 M  +2 -1      fileviewgitplugin.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1296349