Correctly show the version state for directories containing ignored files.

Ignored files do not cause these directories to be shown as Unversioned any more.
Ignored files in the current directory are now also shown in a different color (by marking them as Ignored instead of simply Unversioned).

BUG: 290764
FIXED-IN: 4.9

svn path=/trunk/KDE/kdesdk/dolphin-plugins/; revision=1296349